<resources>
    <string name="app_name">Cashgrab</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_games">Games</string>
    <string name="title_community">Community</string>
    <string name="title_market">Market</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register"><u>Register now!</u></string>
    <string name="no_account">Do not have an account yet?</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="btnRegister">Register</string>
    <string name="btnLogin">Sign in</string>
    <string name="login"><u>Sign in</u></string>
    <string name="account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome to Cashgrab!</string>
    <string name="create_account">Create an account</string>
    <string name="sign_out"><u>Sign out</u></string>
    <string name="hello">Hello</string>
    <string name="bank">Bank</string>
    <string name="income">Income</string>
    <string name="work">Work</string>
    <string name="pocket_money">Pocket money</string>
    <string name="withdraw">Withdraw</string>
    <string name="all">ALL</string>
    <string name="how_much_money_would_you_like_to_deposit">How much money would you like to deposit?</string>
    <string name="deposit">Deposit</string>
    <string name="how_much_money_would_you_like_to_withdraw">How much money would you like to withdraw?</string>
    <string name="gift">Gift</string>
    <string name="steal">Steal</string>
    <string name="interactions">Interactions</string>
    <string name="events">Events</string>
    <string name="choose_who_you_want_to_steal_from">Choose who you want to steal from</string>
    <string name="search_by_username">Search by username</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="choose_who_you_want_to_gift">Choose who you want to gift</string>
    <string name="amount">Amount</string>
    <string name="roulette">Roulette</string>
    <string name="coming_soon">Coming soon</string>
    <string name="x3">x3</string>
    <string name="x2">x2</string>
    <string name="black">Black</string>
    <string name="odd">Odd</string>
    <string name="even">Even</string>
    <string name="red">Red</string>
    <string name="_13_24">13-24</string>
    <string name="_25_36">25-36</string>
    <string name="_1_12">1-12</string>
    <string name="bet">Bet</string>
    <string name="number">Number</string>
    <string name="x36">x36</string>
    <string name="stakes">Stakes</string>
    <string name="apple">Apple</string>
    <string name="stocks">Stocks</string>
    <string name="microsoft">Microsoft</string>
    <string name="tesla">Tesla</string>
    <string name="shop">Shop</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="max">MAX</string>
    <string name="cost">Cost:</string>
    <string name="earnings">Earnings:</string>
    <string name="shares">Shares:</string>
    <string name="the_leaderboard_shows_the_user_s_bank_balance_not_their_cash">The leaderboard shows the bank balances, not the cash!</string>
    <string name="show_roles">Show roles</string>
    <string name="settings">Settings</string>
    <string name="game_rules"><u>Game rules</u></string>
    <string name="account_settings"><u>Account settings</u></string>
    <string name="quit_game"><u>Quit game</u></string>
    <string name="app_settings"><u>App settings</u></string>
    <string name="privacy_settings"><u>Privacy settings</u></string>
    <string name="general">General</string>
    <string name="account_actual">Account</string>
    <string name="game_rules_actual">Game rules</string>
    <string name="in_the_community_tab_you_can_gift_other_players_money_once_an_hour_or_try_to_steal_from_them_once_every_3_hours_the_chance_of_success_for_stealing_is_50_your_earnings_fine_can_range_from_their_full_cash_amount_to_the_negative_equivalent_so_be_cautious_all_gifts_and_steals_regarding_your_account_are_displayed_in_the_event_log">In the community tab, you can gift other players money (once an hour) or try to steal from them (once every 3 hours). The chance of success for stealing is 50%, your earnings/fine can range from their full cash amount to the negative equivalent, so be cautious! All gifts and steals regarding your account are displayed in the event log.</string>
    <string name="tips">Tips</string>
    <string name="there_are_safe_ways_to_earn_money_you_can_work_once_an_hour_and_get_pocket_money_once_every_3_hours_you_can_also_take_a_risk_and_make_profit_by_buying_and_selling_stocks_in_the_market_the_goal_of_the_game_is_to_build_up_a_high_balance_and_climb_the_leaderboard">There are safe ways to earn money, you can work (once an hour) and get pocket money (once every 3 hours). You can also take a risk and make profit by buying and selling stocks in the market. The goal of the game is to build up a high balance and climb the leaderboard.</string>
    <string name="games">Games</string>
    <string name="you_can_also_play_games_to_earn_more_money_you_can_play_5_games_or_15_with_an_upgrade_every_30_minutes_and_it_s_pure_luck_whether_you_win_or_not_so_you_better_be_careful_with_it">You can also play games to earn more money. You can play 5 games (or 15 with an upgrade) every 30 minutes and it\'s pure luck whether you win or not. So you better be careful with it!</string>
    <string name="in_case_of_bankrupcy_you_might_have_something_left_in_your_piggy_bank_try_emptying_it_n_think_twice_before_stealing_from_a_rich_player_you_might_get_fined_for_it">In case of bankrupcy, you might have something left in your piggy bank, try emptying it ;)\nThink twice before stealing from a rich player, you might get fined for it!\nTry to gather knowledge about the stock market, to possibly make more profit off your stocks.</string>
    <string name="but_where_do_you_spend_all_your_money_well_we_have_plenty_of_upgrades_and_cosmetics_in_the_shop_which_you_can_find_in_the_market_tab_you_can_buy_roles_which_are_basically_colors_for_your_name_or_upgrades_which_grant_you_an_advantage_in_your_earnings">But where do you spend all your money? Well, we have plenty of upgrades and cosmetics in the shop, which you can find in the market tab. You can buy roles, which are basically colors for your name, or upgrades, which grant you an advantage in your earnings.</string>
</resources>