<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_community_black_24dp"
        android:title="@string/title_community" />

    <item
        android:id="@+id/navigation_games"
        android:icon="@drawable/ic_games_black_24dp"
        android:title="@string/title_games" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_market"
        android:icon="@drawable/ic_market_black_24dp"
        android:title="@string/title_market" />

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/ic_leaderboard_black_24dp"
        android:title="@string/title_leaderboard" />

</menu>