<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/rounded"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/x3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEven" />

    <Button
        android:id="@+id/buttonBetAll"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="60dp"
        android:text="@string/all"
        app:layout_constraintBottom_toTopOf="@+id/buttonBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textStakes"
        app:layout_constraintTop_toTopOf="@+id/textStakes" />

    <ImageButton
        android:id="@+id/buttonBack5"
        android:background="@drawable/rounded"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/roulette"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textStakes"
        android:layout_width="228dp"
        android:layout_height="68dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/stakes"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/buttonBetAll"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/x2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textStakes" />

    <Button
        android:id="@+id/buttonRed"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:text="@string/red"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonBlack"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/buttonBlack"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/black"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonRed"
        app:layout_constraintTop_toTopOf="@+id/buttonRed" />

    <Button
        android:id="@+id/buttonEven"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:text="@string/even"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonOdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRed" />

    <Button
        android:id="@+id/buttonOdd"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/odd"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonEven"
        app:layout_constraintTop_toTopOf="@+id/buttonEven" />

    <Button
        android:id="@+id/button1to12"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:text="@string/_1_12"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@+id/button13to24"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/button13to24"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/_13_24"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@+id/button25to36"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1to12"
        app:layout_constraintTop_toTopOf="@+id/button1to12" />

    <Button
        android:id="@+id/button25to36"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/_25_36"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button13to24"
        app:layout_constraintTop_toTopOf="@+id/button1to12" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/x36"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13to24" />

    <EditText
        android:id="@+id/textCustomBet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/number"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonCustomBet"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <Button
        android:id="@+id/buttonCustomBet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:enabled="false"
        android:text="@string/bet"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textCustomBet"
        app:layout_constraintTop_toTopOf="@+id/textCustomBet" />
</androidx.constraintlayout.widget.ConstraintLayout>