<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/game_rules_actual"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonBack9"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded"
        android:contentDescription="@string/back"
        app:layout_constraintEnd_toStartOf="@+id/textView21"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

    <ScrollView
        android:layout_width="320dp"
        android:layout_height="550dp"
        android:fadeScrollbars="false"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:scrollbarStyle="outsideInset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/income"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/there_are_safe_ways_to_earn_money_you_can_work_once_an_hour_and_get_pocket_money_once_every_3_hours_you_can_also_take_a_risk_and_make_profit_by_buying_and_selling_stocks_in_the_market_the_goal_of_the_game_is_to_build_up_a_high_balance_and_climb_the_leaderboard"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/interactions"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/in_the_community_tab_you_can_gift_other_players_money_once_an_hour_or_try_to_steal_from_them_once_every_3_hours_the_chance_of_success_for_stealing_is_50_your_earnings_fine_can_range_from_their_full_cash_amount_to_the_negative_equivalent_so_be_cautious_all_gifts_and_steals_regarding_your_account_are_displayed_in_the_event_log"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/games"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/you_can_also_play_games_to_earn_more_money_you_can_play_5_games_or_15_with_an_upgrade_every_30_minutes_and_it_s_pure_luck_whether_you_win_or_not_so_you_better_be_careful_with_it"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/shop"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/but_where_do_you_spend_all_your_money_well_we_have_plenty_of_upgrades_and_cosmetics_in_the_shop_which_you_can_find_in_the_market_tab_you_can_buy_roles_which_are_basically_colors_for_your_name_or_upgrades_which_grant_you_an_advantage_in_your_earnings"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/in_case_of_bankrupcy_you_might_have_something_left_in_your_piggy_bank_try_emptying_it_n_think_twice_before_stealing_from_a_rich_player_you_might_get_fined_for_it"
                android:textAlignment="textStart" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>