<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/textSearch"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="54dp"
        android:ems="10"
        android:hint="@string/search_by_username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack3"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/choose_who_you_want_to_steal_from"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonBack3"
        app:layout_constraintTop_toTopOf="@+id/buttonBack3" />

    <ImageButton
        android:id="@+id/buttonBack3"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

    <ImageButton
        android:id="@+id/buttonSearch"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:contentDescription="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/textSearch"
        app:layout_constraintStart_toEndOf="@+id/textSearch"
        app:srcCompat="?android:attr/actionModeWebSearchDrawable" />

    <ListView
        android:id="@+id/listPlayers"
        android:layout_width="349dp"
        android:layout_height="451dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSearch" />
</androidx.constraintlayout.widget.ConstraintLayout>